--- a/src/main/resources/app/virtualmachine/app-view.fxml
+++ b/src/main/resources/app/virtualmachine/app-view.fxml
@@ -22,7 +22,7 @@
     </Label>
     <Label contentDisplay="BOTTOM" layoutX="424.0" layoutY="14.0" text="RAM">
         <graphic>
-            <TableView prefHeight="326.0" prefWidth="200.0"/>
+            <TableView prefHeight="326.0" prefWidth="200.0" fx:id="ramTableView"/>
         </graphic>
     </Label>
     <Label contentDisplay="BOTTOM" layoutX="251.0" layoutY="125.0" prefHeight="96.0" prefWidth="93.0" text="Registers">
